methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:7: error: value Blue is not a member of object java.awt.Color
          case 2 => Color.Blue
                          ^PatternPicture:8: error: value Green is not a member of object java.awt.Color
          case 3 => Color.Green
                          ^PatternPicture:9: error: value Yellow is not a member of object java.awt.Color
          case 4 => Color.Yellow
                          ^